Fix blurry logo on chrome, add images to sliders

--- a/src/app/primary-navbar/primary-navbar.component.css
+++ b/src/app/primary-navbar/primary-navbar.component.css
@@ -24,7 +24,7 @@ nav {
 
 .navbar-brand img {
 	width: 100%;
-	max-width: 180px;
+	max-width: 182px;
 	display: block;
 	margin: 0 auto;
 }
